# memtc

./: CMakeLists.txt  MemoryManager.cpp  MemoryManager.h  README.md  compile.sh  memtc_memManager.cpp  memtc_memManager.h
memtc/: MemtcJNI.java
